# cw2981-token-level-royalties

./: .gitignore  Cargo.toml  README.md
examples/: schema.rs
schema/: execute_msg.json  query_msg.json
src/: contract.rs  error.rs  msg.rs
